# char_tokenizer_pkg

./: README.md  pyproject.toml  setup.py
char_tokenizer/: __init__.py  tokenizer.py  vocab.py
