[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "char_tokenizer"
version = "0.1.0"
description = "A simple character-level tokenizer for custom datasets"
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = { text = "MIT" }
keywords = ["nlp", "tokenizer", "character", "arabic"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/char-tokenizer"
